# Rust-CUDA

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci_linux.yml  ci_windows.yml  container_images.yml  deploy_guide.yml
container/rockylinux9-cuda12/: Dockerfile
container/rockylinux9-cuda13/: Dockerfile
container/scripts/: dcr  dex
container/ubuntu22-cuda11/: Dockerfile
container/ubuntu22-cuda12/: Dockerfile
container/ubuntu24-cuda12/: Dockerfile
container/ubuntu24-cuda12-llvmdebug/: Dockerfile
container/ubuntu24-cuda13/: Dockerfile
crates/blastoff/: Cargo.toml
crates/blastoff/src/: context.rs  error.rs  level1.rs  level3.rs
crates/blastoff/src/raw/: level1.rs  level3.rs
crates/cuda_builder/: Cargo.toml
crates/cuda_builder/src/: lib.rs
crates/cuda_std/: CHANGELOG.md  Cargo.toml
crates/cuda_std/src/: float.rs  intrinsics.rs  io.rs  lib.rs  mem.rs  ptr.rs  shared.rs  thread.rs  warp.rs
crates/cuda_std/src/atomic/: intrinsics.rs  mid.rs
crates/cuda_std/src/rt/: driver_types_sys.rs  mod.rs  sys.rs
crates/cuda_std_macros/: Cargo.toml
crates/cuda_std_macros/src/: lib.rs
crates/cudnn/: Cargo.toml
crates/cudnn-sys/: Cargo.toml
crates/cudnn/src/activation/: mod.rs
crates/cudnn/src/attention/: seq_data_descriptor.rs
crates/cudnn/src/backend/: conv_bwd_data.rs  conv_bwd_filter.rs  conv_cfg.rs  conv_fwd.rs  engine.rs  engine_cfg.rs  engine_heuristic.rs  execution_plan.rs  graph.rs  matmul.rs  matmul_cfg.rs  pointwise.rs  pointwise_cfg.rs  reduction.rs  reduction_cfg.rs  tensor.rs
crates/cudnn/src/convolution/: convolution_config.rs
crates/cudnn/src/op/: op_tensor_descriptor.rs
crates/cudnn/src/pooling/: mod.rs
crates/cudnn/src/rnn/: rnn_data_descriptor.rs
crates/cudnn/src/softmax/: mod.rs
crates/cust/: CHANGELOG.md  Cargo.toml  build.rs
crates/cust/src/: device.rs  event.rs  external.rs  function.rs  graph.rs  module.rs  prelude.rs  stream.rs  surface.rs  texture.rs  util.rs
crates/cust/src/context/: legacy.rs  mod.rs
crates/cust/src/memory/: array.rs  malloc.rs  mod.rs  pointer.rs  unified.rs
crates/cust_core/: Cargo.toml
crates/cust_core/src/: lib.rs
crates/cust_derive/: Cargo.toml
crates/cust_derive/src/: lib.rs
crates/cust_raw/: Cargo.toml
crates/gpu_rand/: Cargo.toml
crates/gpu_rand/src/: lib.rs
crates/gpu_rand/src/xoroshiro/: mod.rs  xoroshiro128plus.rs  xoroshiro128plusplus.rs  xoroshiro128starstar.rs  xoshiro128plus.rs  xoshiro128plusplus.rs  xoshiro128starstar.rs  xoshiro256plus.rs  xoshiro256plusplus.rs  xoshiro256starstar.rs  xoshiro512plus.rs  xoshiro512plusplus.rs  xoshiro512starstar.rs
crates/nvvm/: Cargo.toml
crates/nvvm/src/: lib.rs
crates/optix/: Cargo.toml
crates/optix-sys/: Cargo.toml
crates/optix/examples/denoiser/: Cargo.toml
crates/optix/examples/ex02_pipeline/: Cargo.toml  build.rs
crates/optix/examples/ex04_mesh/: Cargo.toml  build.rs
crates/optix/examples/path_tracer/: Cargo.toml  build.rs
crates/optix/examples/path_tracer/kernels/: Cargo.toml
crates/optix/examples/path_tracer/kernels/src/: lib.rs  material.rs  render.rs  render_kernels.rs
crates/optix/examples/path_tracer/src/: common.rs  main.rs  viewer.rs
crates/optix/examples/path_tracer/src/cpu/: mod.rs
crates/optix/examples/path_tracer/src/cuda/: data.rs  mod.rs
crates/optix_device_macros/: Cargo.toml
crates/ptx/: Cargo.toml
crates/ptx/src/: lexer.rs
crates/ptx_compiler/: Cargo.toml
crates/ptx_compiler/src/: lib.rs
crates/rustc_codegen_nvvm/: Cargo.toml  build.rs  libintrinsics.bc  libintrinsics.ll
crates/rustc_codegen_nvvm/src/: abi.rs  attributes.rs  back.rs  builder.rs  const_ty.rs  consts.rs  context.rs  ctx_intrinsics.rs  int_replace.rs  intrinsic.rs  lib.rs  llvm.rs  lto.rs  mono_item.rs  nvvm.rs  target.rs  ty.rs
crates/rustc_codegen_nvvm/src/builder/: emulate_i128.rs
crates/rustc_codegen_nvvm/src/debug_info/: metadata.rs  mod.rs
crates/rustc_codegen_nvvm_macros/: Cargo.toml
examples/: README.md
examples/cuda/async_api/kernels/: Cargo.toml
examples/cuda/async_api/src/: main.rs
examples/cuda/gemm/: Cargo.toml
examples/cuda/gemm/src/: main.rs
examples/cuda/i128_demo/: Cargo.toml
examples/cuda/i128_demo/kernels/: Cargo.toml
examples/cuda/path_tracer/: Cargo.toml
examples/cuda/sha2_crates_io/: Cargo.toml
examples/cuda/vecadd/: Cargo.toml
examples/gemm/: Cargo.toml
examples/gemm/kernels/: Cargo.toml
examples/gemm/kernels/src/: gemm_naive.rs  gemm_tiled.rs
examples/gemm/src/: main.rs
examples/i128_demo/: Cargo.toml  build.rs
examples/i128_demo/kernels/: Cargo.toml
examples/i128_demo/kernels/src/: lib.rs
examples/i128_demo/src/: main.rs
examples/path_tracer/: Cargo.toml
examples/path_tracer/kernels/: Cargo.toml
examples/sha2_crates_io/: Cargo.toml
examples/sha2_crates_io/kernels/: Cargo.toml
examples/sha2_crates_io/kernels/src/: lib.rs
examples/vecadd/: Cargo.toml
examples/vecadd/kernels/: Cargo.toml
examples/vecadd/kernels/src/: lib.rs
examples/vecadd/src/: main.rs
guide/: book.toml
guide/src/: README.md  SUMMARY.md  faq.md  features.md  introduction.md
guide/src/cuda/: README.md  gpu_computing.md  pipeline.md
guide/src/guide/: README.md  compute_capabilities.md  getting_started.md  kernel_abi.md  safety.md  tips.md
guide/src/nvvm/: README.md  backends.md  debugging.md  nvvm.md  ptxgen.md  types.md
samples/: README.md
samples/introduction/: README.md
samples/introduction/async_api/: Cargo.toml
samples/introduction/async_api/src/: main.rs
tests/compiletests/: Cargo.toml  README.md
tests/compiletests/src/: main.rs
tests/compiletests/ui/: hello_world.rs
tests/compiletests/ui/atomic/: atomic_operations.rs  std_atomic_ops.rs
tests/compiletests/ui/dis/: simple_add.rs  simple_add.stderr  target_feature_base_cc.stderr
tests/compiletests/ui/glam/: mat3_vec3_multiply.rs  mat4_operations.rs  vec3_operations.rs
tests/compiletests/ui/lang/: compile_fail.stderr
tests/compiletests/ui/shared/: shared_memory.rs
tests/compiletests/ui/warp/: warp_functions.rs  (+1 more)
xtask/: Cargo.toml
(+26 files in other folders)
