[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/optix/examples/ex*",
  "crates/optix/examples/ex*/device",
  "crates/optix/examples/rust/ex*",

  "xtask",

  "examples/cuda/vecadd",
  "examples/cuda/vecadd/kernels",
  "examples/cuda/gemm",
  "examples/cuda/gemm/kernels",
  "examples/cuda/path_tracer",
  "examples/cuda/path_tracer/kernels",
  "examples/cuda/sha2_crates_io",
  "examples/cuda/sha2_crates_io/kernels",

  "examples/optix/*",
  "tests/compiletests",
  "tests/compiletests/deps-helper",

  "samples/introduction/async_api",
  "samples/introduction/async_api/kernels",
]

exclude = [
    "crates/optix/examples/common",
]

[profile.dev.package.rustc_codegen_nvvm]
opt-level = 3

[workspace.dependencies]
cuda_std = { path = "crates/cuda_std" }
cuda_builder = { path = "crates/cuda_builder", version = "=0.3.0", default-features = false }
