[workspace]
resolver = "2"
members = [
  "crates/blastoff",
  "crates/cuda_builder",
  "crates/cuda_std",
  "crates/cuda_std_macros",
  "crates/cudnn",
  "crates/cudnn-sys",
  "crates/cust",
  "crates/cust_core",
  "crates/cust_derive",
  "crates/cust_raw",
  "crates/gpu_rand",
  "crates/nvvm",
  "crates/ptx",
  "crates/ptx_compiler",
  "crates/rustc_codegen_nvvm",
  "crates/rustc_codegen_nvvm_macros",

  # OPTIX_DISABLED: These crates that rely on OptiX are disabled because OptiX is less important
  # than CUDA and the OptiX SDK is a pain to install.
  #
  # The `path-tracer` crates are an exception because the OptiX use is currently commented out. I
  # originally tried putting the OptiX use within these crates behind a feature, but `crates/optix`
  # would be built by `cargo build` even when the feature was disabled, even though it's not listed
  # in `members`. This would break the build if you don't have OptiX installed. (There were also
  # problems with `cargo doc --all-features`.) Commenting out the OptiX-specific code is crude, but
  # at least that way the non-OptiX-specific code (which is a majority of it) can be built and
  # tested, and the OptiX-specific code is still available to be used if necessary with only
  # moderate effort required to uncomment it. (Search for comments mentioning `OPTIX_DISABLED`.)
  #
  # "crates/optix",
  # "crates/optix_device",
  # "crates/optix_device_macros",
  # "crates/optix-sys",
  # "crates/optix/examples/denoiser",
  # "crates/optix/examples/ex02_pipeline",
  # "crates/optix/examples/ex02_pipeline/kernels",
  # "crates/optix/examples/ex03_window",
  # "crates/optix/examples/ex04_mesh",
  # "crates/optix/examples/ex04_mesh/kernels",
  "crates/optix/examples/path_tracer",
  "crates/optix/examples/path_tracer/kernels",

  "examples/gemm",
  "examples/gemm/kernels",
  "examples/i128_demo",
  "examples/i128_demo/kernels",
  "examples/sha2_crates_io",
  "examples/sha2_crates_io/kernels",
  "examples/vecadd",
  "examples/vecadd/kernels",

  "samples/introduction/async_api",
  "samples/introduction/async_api/kernels",

  "tests/compiletests",
  "tests/compiletests/deps-helper",

  "xtask",
]

[profile.dev.package.rustc_codegen_nvvm]
opt-level = 3

[workspace.dependencies]
cuda_std = { path = "crates/cuda_std" }
cuda_builder = { path = "crates/cuda_builder", version = "=0.3.0", default-features = false }
rustc_codegen_nvvm = { path = "crates/rustc_codegen_nvvm", version = "=0.3.0" }
