[package]
name = "blastoff"
version = "0.1.0"
edition = "2024"
authors = ["Riccardo D'Ambrosio <rdambrosio016@gmail.com>"]
repository = "https://github.com/Rust-GPU/rust-cuda"

[dependencies]
bitflags = "2.8"
cust = { version = "0.3", path = "../cust", features = ["impl_num_complex"] }
cust_raw = { path = "../cust_raw", features = ["cublas"] }
num-complex = "0.4.6"
half = { version = "2.4.1", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html", "--cfg", "docsrs"]
