[package]
name = "path-tracer"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30", features = ["bytemuck", "cuda", "mint"] }
bytemuck = { version = "1.21", features = ["derive"] }
cust = { version = "0.3", path = "../../../cust", features = ["impl_glam"] }
image = "0.25.5"
path-tracer-kernels = { path = "kernels" }
gpu_rand = { version = "0.1", path = "../../../gpu_rand" }
# See the OPTIX_DISABLED comment.
# optix = { version = "0.1", path = "../../../optix" }
glium = "0.32.0"
glutin = "0.28.0"
imgui = "0.9.0"
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
rayon = "1.10.0"
sysinfo = "0.33.1"
anyhow = "1.0.53"

[build-dependencies]
cuda_builder = { workspace = true, default-features = false }
