[package]
name = "path-tracer-kernels"
version = "0.1.0"
edition = "2024"

[dependencies]
cuda_std = { version = "0.2", path = "../../../../cuda_std" }
glam = { version = "0.30", default-features = false, features = ["libm", "cuda"] }
enum_dispatch = "0.3.13"
gpu_rand = { version = "0.1", path = "../../../../gpu_rand" }
cust_core = { path = "../../../../cust_core", features = ["glam"] }
optix_device = { path = "../../../../optix_device" }
approx = { version = "0.5" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
optix = []
